# chatbot_RAG

./: .env.example  .gitignore  README.md  long_term_memory.json  main.py  pyproject.toml  requirements.txt  server.py
chroma_db/: chroma.sqlite3
config/: settings.py
core/: llm_client.py  memory_store.py  rag_engine.py  tools.py
knowledge/: my_info.txt  returns.txt
prompts/: system_prompt.txt
src/chatbot/: exceptions.py  logging_config.py
src/chatbot/api/: server.py
src/chatbot/cli/: main.py
src/chatbot/config/: __init__.py  settings.py
src/chatbot/core/: __init__.py  llm_client.py  memory_store.py  persistence.py  rag_engine.py  session_manager.py  tools.py  user_context.py
static/: index.html
tests/: conftest.py
tests/api/: test_server.py
tests/core/: test_agent.py  test_llm_client.py  test_memory_store.py  test_persistence.py  test_rag_engine.py  test_tools.py
