[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot"
version = "2.0.0"
description = "AI Agent with ReAct loop, tiered memory, and RAG knowledge base"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "openai>=1.30.0,<2.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "langchain-community>=0.2.0,<2.0.0",
    "langchain-core>=0.2.0,<2.0.0",
    "langchain-text-splitters>=0.2.0,<2.0.0",
    "chromadb>=0.5.0,<2.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.3.0,<1.0.0",
]

[project.scripts]
chatbot-cli = "chatbot.cli.main:main"
chatbot-server = "chatbot.api.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
